resized images, added more styling

--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -18,11 +18,24 @@
 .feedItem {
     margin: 5px;
     padding: 5px;
-    height: 100px;
-    width: 100px;
+    height: 200px;
+    width: 200px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    text-align: center;
     background: #d5d5d5;
+}
+
+.cardImage {
+    width: 150px;
+    display: flex;
+}
+
+.cardImage img{
+    width: 100%;
+    height: auto;
 }
 
 .playlistFeedContainer {
