--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -1,7 +1,7 @@
 .topBar {
   display: flex;
   background: #1a1a1a;
-  height: 6vh;
+  height: 6%;
   justify-content: space-between;
   align-items: center;
 }
