--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -5,3 +5,11 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.navCenter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 1em;
+  color: #00BAFF;
+}
