--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -1,7 +1,7 @@
 .topBar {
   display: flex;
   background: #1a1a1a;
-  height: 6%;
+  height: 6vh;
   justify-content: space-between;
   align-items: center;
 }
@@ -12,4 +12,15 @@
   align-items: center;
   column-gap: 1em;
   color: #00BAFF;
+}
+
+.selected {
+  text-decoration: none;
+  font-weight: bold;
+  color: inherit;
+}
+
+.unselected {
+  text-decoration: none;
+  color: inherit;
 }
