--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     background: #383838;
-    height: 94%;
+    height: 94vh;
     color: #00BAFF;
 }
 
@@ -29,6 +29,7 @@
     text-align: center;
     color: black;
     background: #d5d5d5;
+    text-decoration: none;
 }
 
 .cardImage {
