--- a/src/components/Album/Album.css
+++ b/src/components/Album/Album.css
@@ -1,10 +1,58 @@
 .albumPageContainer {
-  height: 100vh;
-  width: 100%;
-  margin: 0;
+    height: 100vh;
+    width: 100%;
+    margin: 0;
 }
 
 .albumPageBody {
-  width: 100%;
-  display: flex;
+    width: 100%;
+    height: 88vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 6vh;
+}
+
+.albumHeader {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    column-gap: 30px;
+}
+
+.albumHeaderInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    color: #b3b3b3;
+}
+
+.albumTitle {
+    font-size: 3em;
+}
+
+.albumContent {
+    width: 60%;
+    height: 100%;
+    margin-top: 3vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    row-gap: 1vh;
+}
+
+.albumSong {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.albumSongInfo {
+    flex: 0 0 33.33%;
+    padding: 1em;
+    background: #525252;
 }
