--- a/src/components/Artist/Artist.css
+++ b/src/components/Artist/Artist.css
@@ -1,10 +1,35 @@
 .artistPageContainer {
-  height: 100vh;
-  width: 100%;
-  margin: 0;
+    height: 100vh;
+    width: 100%;
+    margin: 0;
 }
 
 .artistPageBody {
-  width: 100%;
-  display: flex;
+    width: 100%;
+    height: 88vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 6vh;
+}
+
+.artistHeader {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    column-gap: 30px;
+}
+
+.artistHeaderInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    color: #b3b3b3;
+}
+
+.artistTitle {
+    font-size: 3em;
 }
